<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GalDroid</string>
    <string name="menu_create_gallery">Add Gallery</string>
    <string name="menu_edit_gallery">Edit Gallery</string>
    <string name="menu_delete_gallery">Delete Gallery</string>
    <string name="menu_synchronize_cache">Synchronize Cache</string>
    <string name="menu_cleanup_cache">Cleanup Cache</string>
    <string name="button_create">Create</string>
    <string name="button_edit">Edit</string>
    <string name="progress_title_verify">Verify Usercredentials</string>
    <string name="progress_title_load_gallery">Load Gallery</string>
    <string name="progress_title_load_image">Load Image</string>
    <string name="gallery_type">Gallery Type</string>
    <string name="gallery_host">Server</string>
    <string name="gallery_username">User</string>
    <string name="gallery_password">Password</string>
    <string-array name="gallery_types">
        <item>Gallery 3</item>
    </string-array>
    <string name="gallery_types_prompt">Choose a gallery type</string>
    <string name="gallery_name">Gallery name</string><string name="object_title">Title</string>
    <string name="object_tags">Tags</string>
    <string name="object_createdate">Created</string>
    <string name="object_uploaddate">Released</string>
    <string name="object_comments">Comments</string>
    <string name="menu_image_info">Additional Info</string>
	<string name="menu_image_share">Share &#8230;</string>
    <string name="object_informations">Gallery Informations</string>
    <string name="object_exif_informations">EXIF Informationen</string>
    <string name="object_exif_createdate">Createdate</string>
    <string name="object_exif_aperture">Aperture</string>
    <string name="object_exif_exposure">Exposure</string>
    <string name="object_exif_flash">Flash</string>
    <string name="object_exif_focallength">Focallength</string>
    <string name="object_exif_iso">ISO</string>
    <string name="object_exif_make">Make</string>
    <string name="object_exif_model">Model</string>
    <string name="object_exif_whitebalance">Whitebalance</string>
    <string name="object_exif_whitebalance_auto">automatic</string>
    <string name="object_exif_whitebalance_manual">manual</string>
    <string name="object_geo_informations">Geo Informations</string>
    <string name="object_geo_lat">Latitude</string>
    <string name="object_geo_long">Longitude</string>
    <string name="object_geo_height">Height</string>
    <string name="comment_wrote_at">wrote at</string>
</resources>
